[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/TeleportPassDispatcher/teleport_pass_dispatcher.png" type="Texture" id=1]
[ext_resource path="res://scenes/TeleportPassDispatcher/TeleportPassDispatcher.gd" type="Script" id=2]
[ext_resource path="res://scenes/InfoAreas/InfoArea.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 14 )

[node name="TeleportPassDispatcher" type="StaticBody2D" groups=[
"TeleporterPassDispatcherGroup",
]]
z_index = 1
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, -16 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -8, 8, -24, 40, -24, 48, -8, 48, 0, 0, 0 )

[node name="ActivateArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateArea"]
position = Vector2( 24, -26 )
shape = SubResource( 1 )

[node name="InfoArea" parent="." instance=ExtResource( 3 )]
text = "Stay over it to recover your health or activate it to exchange one of your droid's lives for a teleporter pass."

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfoArea"]
position = Vector2( 24, -14 )
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 24, -26 )
z_index = 2
emitting = false
amount = 20
lifetime = 0.6
randomness = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 10, 1 )
gravity = Vector2( 0, -100 )

[node name="ItemSpawner" type="Position2D" parent="."]
position = Vector2( 48, 0 )
[connection signal="body_entered" from="ActivateArea" to="." method="_on_ActivateArea_body_entered"]
[connection signal="body_exited" from="ActivateArea" to="." method="_on_ActivateArea_body_exited"]
